<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.example.administrator.mycollegeguide.activities.LoginActivity">


    <EditText
        android:drawableLeft="@drawable/username"
        android:id="@+id/username"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/username"
        android:textColor="@android:color/black"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:drawableLeft="@drawable/password"
        android:id="@+id/password"
        android:layout_width="280dp"
        android:textColor="@android:color/black"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/username"
        android:layout_alignTop="@+id/username"
        android:layout_marginTop="66dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="220dp"
        android:layout_height="35dp"
        android:background="@drawable/login_button"
        android:layout_marginTop="57dp"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/sign_up"
        android:textSize="17sp"
        android:textColor="@android:color/darker_gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/sign_up"
        android:layout_marginStart="32dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/forgot_password"
        android:textSize="17sp"
        android:layout_width="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_alignBaseline="@+id/sign_up"
        android:layout_alignBottom="@+id/sign_up"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="25dp" />


</RelativeLayout>
